Fix some FindBugs issues