@@ -1,66 +1,38 @@
 package ru.arsmagna.infrastructure;
 
-import org.jetbrains.annotations.*;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import ru.arsmagna.*;
+import ru.arsmagna.IrbisConnection;
+import ru.arsmagna.IrbisEncoding;
+import ru.arsmagna.Utility;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 
+import static ru.arsmagna.Utility.isNullOrEmpty;
+
 /**
  * Клиентский запрос.
  */
-public final class ClientQuery
-{
-    /**
-     * Разделитель строк в клиентском запросе.
-     */
-    public static final char DELIMITER=(char)0x0A;
+public final class ClientQuery {
 
-    //=========================================================================
-
-    /**
-     * Код команды.
-     */
-    public String commandCode;
-
-    /**
-     * Код АРМ.
-     */
-    public char workstation;
-
-    /**
-     * Идентификатор клиента.
-     */
-    public int clientId;
-
-    /**
-     * Номер команды.
-     */
-    public int commandNumber;
-
-    /**
-     * Пользовательский логин.
-     */
-    public String userLogin;
+    private ByteArrayOutputStream stream;
 
     //=========================================================================
 
     /**
      * Конструктор.
-     * @param connection Подключение.
+     *
+     * @param connection  Подключение.
      * @param commandCode Код команды.
      */
-    public ClientQuery
-        (
-            @NotNull IrbisConnection connection,
-            @NotNull String commandCode
-        )
-        throws IOException
-    {
+    public ClientQuery (@NotNull IrbisConnection connection, @NotNull String commandCode) throws IOException {
+        if (connection == null || isNullOrEmpty(commandCode)) { throw new IllegalArgumentException(); }
+
         stream = new ByteArrayOutputStream();
         addAnsi(commandCode);
-        addAnsi(new Character(connection.workstation).toString());
+        addAnsi(Character.valueOf(connection.workstation).toString());
         addAnsi(commandCode);
         add(connection.clientId);
         connection.queryId++;
@@ -74,66 +46,34 @@ public final class ClientQuery
 
     //=========================================================================
 
-    private ByteArrayOutputStream stream;
-
-    //=========================================================================
-
-    public final void add
-        (
-            boolean value
-        )
-        throws IOException
-    {
+    public final void add (boolean value) throws IOException {
         String text = value ? "1" : "0";
         addAnsi(text);
     }
 
-    public final void add
-        (
-            int value
-        )
-        throws IOException
-    {
-        String text = new Integer(value).toString();
+    public final void add (int value) throws IOException {
+        String text = Integer.toString(value);
         addAnsi(text);
     }
 
-    public final void addAnsi
-        (
-            @Nullable String text
-        )
-        throws IOException
-    {
+    public final void addAnsi (@Nullable String text) throws IOException {
         addAnsiNoLF(text);
         addLineFeed();
     }
 
-    public final void addAnsiNoLF
-        (
-            @Nullable String text
-        )
-        throws IOException
-    {
-        if (!Utility.isNullOrEmpty(text))
-        {
+    public final void addAnsiNoLF (@Nullable String text) throws IOException {
+        if (!isNullOrEmpty(text)) {
             byte[] bytes = text.getBytes(IrbisEncoding.ansi());
             stream.write(bytes);
         }
     }
 
-    public final void addLineFeed() throws IOException
-    {
+    public final void addLineFeed() throws IOException {
         stream.write(Utility.LF);
     }
 
-    public final void addUtf
-        (
-            @Nullable String text
-        )
-        throws IOException
-    {
-        if (!Utility.isNullOrEmpty(text))
-        {
+    public final void addUtf (@Nullable String text) throws IOException {
+        if (!isNullOrEmpty(text)) {
             byte[] bytes = text.getBytes(IrbisEncoding.utf());
             stream.write(bytes);
         }
@@ -141,8 +81,7 @@ public final class ClientQuery
     }
 
     @NotNull
-    public final byte[] encode()
-    {
+    public final byte[] encode() {
         byte[] buffer = stream.toByteArray();
         byte[] prefix = IrbisEncoding.ansi().encode(buffer.length + "\n").array();
         byte[] result = new byte[prefix.length + buffer.length];
